# python-client

./: .gitignore  .pypirc  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  webshotapi.html
docs-source/: conf.py  webshotapi.rst
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  webshotapi.doctree
docs/_build/doctrees/: conf.doctree  environment.pickle  index.doctree  modules.doctree  webshotapi.doctree
docs/_build/html/: .buildinfo  conf.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  webshotapi.html
docs/_build/html/_sources/: webshotapi.rst.txt
docs/_sources/: index.rst.txt
examples/: create_project.py  extract.py  multi_requests.py  pdf.py  projects_list.py  screenshot.py  screenshot_json.py  screenshot_webp.py  scrolling_video_json.py  video_json.py
tests/: conftest.py  test_extract.py  test_info.py  test_projects.py  test_screenshot.py  test_video.py
webshotapi/: ApiClient.py  ApiException.py  CHANGELOG  Client.py  Project.py  Projects.py  RESTResponse.py  RequestClient.py  __init__.py  client.py  client_exception.py  setup.py  types.py  version.py
webshotapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
